--- a/IQToolkit/IQToolkit.csproj
+++ b/IQToolkit/IQToolkit.csproj
@@ -139,6 +139,7 @@
     <Compile Include="Updatable.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="IQToolkit.nuspec" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
